force-app/main/default/objects/CEMS_Resignation__c/CEMS_Resignation__c.object-meta.xml
<CustomObject>
    <label>Resignation</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Resignation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resignations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>