force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Contact_Number__c</fullName>
    <formula>CEMS_Employee_Name__r.CEMS_Contact_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>