force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Current_Level__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Current_Level__c</fullName>
    <formula>TEXT( CEMS_Employee_Name__r.CEMS_Current_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Level</label>
    <type>Text</type>
</CustomField>