force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Current_Position__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Current_Position__c</fullName>
    <formula>CEMS_Employee_Name__r.CEMS_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Position</label>
    <type>Text</type>
</CustomField>