force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Resignations</relationshipLabel>
    <relationshipName>Resignations</relationshipName>
    <type>Lookup</type>
</CustomField>