force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Feedback_on_Company__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Feedback_on_Company__c</fullName>
    <label>Feedback on Company</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>