force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Last_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Last_Working_Day__c</fullName>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>