force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Mode_of_Relieving__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Mode_of_Relieving__c</fullName>
    <label>Mode of Relieving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Layoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>