force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Personal_Email__c</fullName>
    <formula>CEMS_Employee_Name__r.CEMS_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Email</label>
    <type>Text</type>
</CustomField>