force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Reason_for_Resignation__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Reason_for_Resignation__c</fullName>
    <label>Reason for Resignation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary Hike</fullName>
            </value>
            <value>
                <fullName>Personal Reasons</fullName>
            </value>
            <value>
                <fullName>Career Growth</fullName>
            </value>
            <value>
                <fullName>Poor Performance</fullName>
            </value>
            <value>
                <fullName>BGV Failure</fullName>
            </value>
            <value>
                <fullName>Misconduct</fullName>
            </value>
            <value>
                <fullName>Economic Factors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>