force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Resigned_on__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Resigned_on__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resigned on</label>
    <type>Date</type>
</CustomField>