force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Status__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Under Negotiation</fullName>
            </value>
            <value>
                <fullName>Under Approval</fullName>
            </value>
            <value>
                <fullName>Negotiation Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Exit Process Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>