force-app/main/default/objects/CEMS_Resignation__c/fields/CEMS_Type__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Type__c</fullName>
    <formula>TEXT( CEMS_Employee_Name__r.CEMS_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>